<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@drawable/navigator_background"
    android:orientation="vertical"
    android:gravity="bottom"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingBottom="15dp"
    android:paddingStart="15dp">

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:srcCompat="@drawable/user_logo"
        android:id="@+id/profilePicture"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/clientName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/andada_regular"
        android:text="@string/client_name"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/andada_regular"
        android:text="@string/welcome_to_global_market"
        android:textColor="#FFFFFF"
        android:textSize="14sp" />

</LinearLayout>